# union3

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  weird_sn_list.txt
DES_testing/: set_up_UNITY.py
cobaya/: ACT_PP.input.yaml  ACT_U3.input.yaml  ACT_U31_18.input.yaml  ACT_just_CMB.input.yaml  cobaya_input_PP_input_generator_ACT.yaml  cobaya_input_U3_input_generator.yaml  cobaya_input_U3_input_generator_ACT.yaml  install_cob.sh  run_ACT_31.sh  run_ACT_just_CMB.sh  run_Union3_2.sh  w0wa.py
data/: Amanullah10.parquet  CSP.parquet  CalanTololo.parquet  CfA1.parquet  CfA2.parquet  CfA3.parquet  DES3_Deep.parquet  DES3_Shallow.parquet  ESSENCE.parquet  Knop03.parquet  Krisciunas.parquet  LOSS.parquet  MCT.parquet  Pan-STARRS.parquet  Riess07.parquet  SDSS.parquet  SuzukiRubin.parquet
other_cosmology/: BAOCMB_Omw0wa.pickle  BAO_results.txt  compute_chi2s.py  cosmo_functions.py  merged_vals_new_samps_base_w_plikHM_TTTEEE_lowl_lowE.fits  mu_mat_union3_cosmo=2.fits  plot_contours.py  slurm_jobs.py  step1_make_new_samps.py  step2_make_cov_mat.py
paramfiles/: ACSWF_F850LP_selection.txt  Azwave_grid.fits  CalanTololo_I_selection.txt  CalanTololo_R_selection.txt  HSC_z_selection.txt  MEGACAMJLA_i_selection.txt  No_k_correct.txt  SDSS_g_selection.txt  SDSS_i_selection.txt  SDSS_r_selection.txt  WFC3_f125w_selection.txt  calibration_uncertainties.json  calibration_uncertainties.txt  calibration_uncertainties_only_HST.txt  convert_ceph.py  desi_selection_salt3-f22_AB.txt  dist_ladder_R22.txt  dominant_evecs.fits  f125w_selection_salt3-f22_ab.txt  lensing_bias.txt  mag_cuts.txt  make_k_cor_file.py  paramfile_Union3.txt  paramfile_Union3_lowz.txt  paramfile_sdss.txt  ra_dec_z.txt  sample_names_colors.txt  sdssi_selection_salt3-f22_ab.txt  sdssr_selection_salt3-f22_ab.txt  sim_sne_selection.txt  table.input  table.input2  weird_sn_list.txt  z_mu_dmudOm.txt  z_mu_dmudOm_w0wa.txt
scripts/: Spectra.py  check_delta_sys.py  corner_plots.py  flow_plots.py  helper_functions.py  merge_pickle_samples.py  merge_pickle_samples_wrap.py  minimize_w0_wa_correlation.py  plot_PPD.py  population_ppd.py  read_and_sample.py  read_and_sample_H0.py  relative_unblind.py  result_plots.py  setup_slurm_runs.py  setup_slurm_runs.sh  setup_slurm_runs_18.sh  slurm_run.sh  stan_code_H0.txt  stan_code_H0_1.8.txt  stan_code_H0_betaBfastslow.txt  stan_code_H0_fastbetaR.txt  (+9 more)
(+164 files in other folders)
